# CSUBatch

./: Analytics.c  Analytics.h  CMakeLists.txt  CommandLineParser.c  CommandLineParser.h  Constants.h  Dispatcher.c  Dispatcher.h  Errors.h  Job.c  Job.h  JobQueue.c  JobQueue.h  Makefile  README.md  Scheduler.c  Scheduler.h  SchedulingPolicies.c  SchedulingPolicies.h  UI_Strings.h  batch_job  batch_job.c  main.c  main.h
CSUBatch/: Analytics.c  Analytics.h  CommandLineParser.c  CommandLineParser.h  Constants.h  Dispatcher.c  Dispatcher.h  Errors.h  Job.c  Job.h  JobQueue.c  JobQueue.h  Scheduler.c  Scheduler.h  SchedulingPolicies.c  SchedulingPolicies.h  UI_Strings.h  main.c  main.h
CSUBatch.xcodeproj/: project.pbxproj
CSUBatch.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CSUBatch.xcodeproj/xcuserdata/MichaelMoore.xcuserdatad/xcschemes/: xcschememanagement.plist
GMM_code/: CommandLineParser.c  CommandLineParser.h  Dispatcher.c  Job.c  Scheduler.c  Scheduler.h  UI_Strings.h  main.c
